--- a/setup.cfg
+++ b/setup.cfg
@@ -5,11 +5,15 @@ max-complexity = 18
 select = B,C,E,F,W,T4
 
 [isort]
+line_length=88
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
 use_parentheses=True
-line_length=88
+balanced_wrapping=True
+import_heading_stdlib=Standard Library
+import_heading_firstparty=Custom
+import_heading_thirdparty=Thirdparty
 
 [mypy]
 files=best_practices_template,test
